=== xdg-utils 1.x.x ====

2010-02-24 Fathi Boudra <fabo@freedesktop.org>
    * xdg-screensaver: use dbus-send instead of qdbus for freedesktop
      screensaver.

2010-02-23 Fathi Boudra <fabo@freedesktop.org>
    * xdg-mime: improve MIME string check when using gnomevfs-info. (BR12818)

2010-02-23 Fathi Boudra <fabo@freedesktop.org>
    * xdg-mime: report error on failure.

2010-02-21 Fathi Boudra <fabo@freedesktop.org>
    * xdg-open: in open_generic, use xdg-mime to lookup mime type and
      association before the alternatives methods (mimeopen and run-mailcap).
      (BR23280)

2010-02-20 Fathi Boudra <fabo@freedesktop.org>
    * Add gvfs-copy and gvfs-info support. (BR15828)

2010-01-27 Rex Dieter <rdieter@fedoraproject.org>
    * xdg-settings: Add %s to the command in the Gnome url handlers (BR26284)

2010-01-18 Rex Dieter <rdieter@fedoraproject.org>
    * xdg-screensaver resume activates the screensaver on KDE4 (BR26085)

2009-10-16 Rex Dieter <rdieter@fedoraproject.org>
    * prefer gvfs-open over gnome-open
    * DE=gnome, if org.gnome.SessionManager exists on dbus

2009-10-12 Fathi Boudra <fabo@freedesktop.org>
    * Fix xdg-email --attach failure with Evolution. (BR23007)
      Thanks to Dwayne Bailey <dwayne@translate.org.za>

2009-10-12 Fathi Boudra <fabo@freedesktop.org>
    * Add an extra check in xdg-open and call kfmclient openURL as a fallback
	  on KDE 4. Thanks to Nicolas Lécureil <neoclust@mandriva.org>

2009-10-12 Fathi Boudra <fabo@freedesktop.org>
    * Add email attachments support to Thunderbird from xdg-email. (BR13435)
      Thanks to Lei Zhang <thestig@google.com>

2009-10-12 Fathi Boudra <fabo@freedesktop.org>
    * Fix xdg-open to handle URL with '#' symbol. (BR23319, BR24375)

2009-10-12 Fathi Boudra <fabo@freedesktop.org>
    * Remove bash requirement to xdg-open and xdg-email. (BR20015)

2009-10-12 Fathi Boudra <fabo@freedesktop.org>
    * Update xdg-settings - Thanks to Mike Mammarella: